external-crates/move/crates/move-compiler/tests/move_2024/typing/use_lambda_outside_call_invalid.exp
error[E04010]: cannot infer type
  ┌─ tests/move_2024/typing/use_lambda_outside_call_invalid.move:3:13
  │
3 │         let x = f;
  │             ^ Could not infer this type. Try adding an annotation

error[E04010]: cannot infer type
  ┌─ tests/move_2024/typing/use_lambda_outside_call_invalid.move:3:17
  │
3 │         let x = f;
  │                 ^ Could not infer this type. Try adding an annotation

error[E04031]: invalid usage of lambda
  ┌─ tests/move_2024/typing/use_lambda_outside_call_invalid.move:3:17
  │
3 │         let x = f;
  │                 ^ Lambdas can only be used directly as arguments to macro functions

error[E04007]: incompatible types
  ┌─ tests/move_2024/typing/use_lambda_outside_call_invalid.move:4:9
  │
4 │         x();
  │         ^ Expected a lambda type type but found '_'

error[E04030]: invalid usage of lambda type
  ┌─ tests/move_2024/typing/use_lambda_outside_call_invalid.move:8:13
  │
8 │         f = || 0;
  │             ^^^^ Unexpected lambda type. Lambdas can only be used as parameters for, or direct arguments to, macro functions

error[E04031]: invalid usage of lambda
  ┌─ tests/move_2024/typing/use_lambda_outside_call_invalid.move:8:13
  │
8 │         f = || 0;
  │             ^^^^ Lambdas can only be used directly as arguments to macro functions

error[E04030]: invalid usage of lambda type
   ┌─ tests/move_2024/typing/use_lambda_outside_call_invalid.move:17:14
   │
17 │         bar!(|| 0);
   │              ^^^^ Unexpected lambda type. Lambdas can only be used as parameters for, or direct arguments to, macro functions

error[E04032]: unable to expand macro function
   ┌─ tests/move_2024/typing/use_lambda_outside_call_invalid.move:18:14
   │
18 │         foo!(baz!(|| || 0));
   │              ^^^^^^^^^^^^^ Unable to bind lambda to parameter 'f'. The lambda must be passed directly

